infra/security/authentik/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-https
  namespace: authentik
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway
  hostnames:
  - "authentik.lab.sturla.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
